force-app/main/default/objects/Logged_in_Device__c/Logged_in_Device__c.object-meta.xml
<CustomObject>
    <label>Logged in Device</label>
    <nameField>
        <displayFormat>ldd-{00000}</displayFormat>
        <label>Logged in Device Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logged in Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>