force-app/main/default/objects/Logged_in_Device__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>Logged in Devices</relationshipLabel>
    <relationshipName>Logged_in_Devices</relationshipName>
    <type>Lookup</type>
</CustomField>