force-app/main/default/objects/Logged_in_Device__c/fields/Last_Logged_Out__c.field-meta.xml
<CustomField>
    <fullName>Last_Logged_Out__c</fullName>
    <label>Last Logged Out</label>
    <type>DateTime</type>
</CustomField>